[package]
name = "sni-router"
version = "0.1.0"
edition = "2021"
description = "High-performance SNI-based L4 router: TCP/UDP/QUIC passthrough without TLS termination"
license = "Apache-2.0"
repository = "https://github.com/Ashteeer/sni-router"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
# maintained drop-in fork of the archived serde_yaml (RUSTSEC-2024-0320)
serde_norway = "0.9"

# QUIC Initial decryption (RFC 9001 key schedule). Pure-Rust RustCrypto crates,
# no C toolchain needed on the build server.
hkdf = "0.12"
sha2 = "0.10"
aes = "0.8"
aes-gcm = "0.10"

# Runtime: io_uring thread-per-core, plus raw socket setup for SO_REUSEPORT.
monoio = "0.2"
socket2 = "0.5"

# TLS termination (mode: terminate). rustls with the `ring` provider — builds
# with cc+perl, no cmake/nasm needed on the build server.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
monoio-rustls = "0.4"
rustls-pemfile = "2"
webpki-roots = "0.26"
httparse = "1"
# Lock-free pointer swap for zero-downtime cert reload (and, later, config reload).
arc-swap = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
