[package]
name = "sni-router"
version = "1.4.1"
edition = "2021"
description = "High-performance SNI-aware edge router for Linux: TCP/UDP/QUIC passthrough plus TLS termination (HTTP/1.1, HTTP/2, WebSocket, DoT) on io_uring/monoio"
license = "Apache-2.0"
repository = "https://github.com/Ashteeer/sni-router"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
# maintained drop-in fork of the archived serde_yaml (RUSTSEC-2024-0320)
serde_norway = "0.9"

# QUIC Initial decryption (RFC 9001 key schedule). Pure-Rust RustCrypto crates,
# no C toolchain needed on the build server.
hkdf = "0.12"
sha2 = "0.10"
aes = "0.8"
aes-gcm = "0.10"

# Runtime: io_uring thread-per-core, plus raw socket setup for SO_REUSEPORT.
# `splice` enables kernel zero-copy forwarding (monoio::io::zero_copy).
monoio = { version = "0.2", features = ["splice"] }
socket2 = "0.5"

# TLS termination (mode: terminate). rustls with the `ring` provider — builds
# with cc+perl, no cmake/nasm needed on the build server.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
monoio-rustls = "0.4"
rustls-pemfile = "2"
webpki-roots = "0.26"
httparse = "1"

# HTTP/2 termination: native monoio h2 server (a port of hyperium/h2), so no
# tokio is pulled into the core. We drive it as an h2->HTTP/1.1 gateway.
monoio-http = "0.3"
http = "1"
bytes = "1"
# Lock-free pointer swap for zero-downtime cert reload (and, later, config reload).
arc-swap = "1"

# Structured logging. Runtime-agnostic (not tokio-bound); `env-filter`/`regex`
# left out on purpose — the level comes from config/`RUST_LOG` bare level.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "ansi", "json"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# SIGHUP graceful reload.
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
